2010-06-02  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Dirk Schulze.

        [Qt] Image shadow doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=37804

        Enable image shadow basic test and disable image shadow transparent test case, that failed
        because of the Qt known issue on transparent image.

        * platform/qt/Skipped:
2010-06-02  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Dirk Schulze.

        [Qt] Image shadow doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=37804

        Implement the code for image shadow

        * platform/graphics/qt/ImageQt.cpp:
        (WebCore::BitmapImage::draw):

Canonical link: https://commits.webkit.org/51579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60546 268f45cc-cd09-0410-ab3c-d52691b4dbfc